header text fix contrast
improve contrast in text in header

--- a/styles/numGrey.css
+++ b/styles/numGrey.css
@@ -96,8 +96,8 @@ section{
 
 .banner h4{
   font-family : Open Sans;
-  font-size : 1.1rem;
-  font-weight: 150;
+  font-size : 1rem;
+  font-weight: bold;
   color : #BBFE9B;
   position: relative;
   text-align: center;
