--- a/styles/numWhite.css
+++ b/styles/numWhite.css
@@ -95,8 +95,8 @@ section{
 
 .banner h4{
   font-family : Open Sans;
-  font-size : 1.1rem;
-  font-weight: 100;
+  font-size : 1rem;
+  font-weight: bold;
   color : #BBFE9B;
   position: relative;
   text-align: center;
